gen/CoralLanguageParser.java
// Generated from /Users/puntored/Desktop/UN/programming_languages/Interprete_coral/grammar/CoralLanguage.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoralLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TKN_ASSIGN=1, TKN_PERIOD=2, TKN_COMMA=3, TKN_SEMICOLON=4, TKN_CLOSING_BRA=5, 
		TKN_OPENING_BRA=6, TKN_CLOSING_PAR=7, TKN_OPENING_PAR=8, TKN_PLUS=9, TKN_MINUS=10, 
		TKN_TIMES=11, TKN_OPENING_CB=12, TKN_CLOSING_CB=13, TKN_DIV=14, TKN_MOD=15, 
		TKN_EQUAL=16, TKN_NEQ=17, TKN_LESS=18, TKN_LEQ=19, TKN_GREATER=20, TKN_GEQ=21, 
		TKN_QUESTION_MARK=22, GET=23, NEXT=24, INPUT=25, PUT=26, TO=27, OUTPUT=28, 
		IF=29, ELSEIF=30, ELSE=31, WHILE=32, FOR=33, INTEGER=34, FLOAT=35, ARRAY=36, 
		FUNCTION=37, RETURNS=38, SIZE=39, MAIN=40, OR=41, AND=42, NOTHING=43, 
		NOT=44, SRN=45, ABS=46, SQRT=47, POW=48, RAND=49, WITH=50, DECIMAL=51, 
		PLACES=52, TKN_ID=53, TKN_INT=54, TKN_FLOAT=55, TKN_STR=56, ESP=57, LINE_COMMENT=58;
	public static final int
		RULE_inicial = 0, RULE_functionchain = 1, RULE_funcion = 2, RULE_main = 3, 
		RULE_returnopt = 4, RULE_type = 5, RULE_params = 6, RULE_params_suffix = 7, 
		RULE_body = 8, RULE_nonempty = 9, RULE_vardeclaration = 10, RULE_arrdeclaration = 11, 
		RULE_arrdeclarationopt = 12, RULE_idcall = 13, RULE_idstuff = 14, RULE_idopt = 15, 
		RULE_dotsize = 16, RULE_arrpos = 17, RULE_arguments = 18, RULE_arguments_suffix = 19, 
		RULE_assignation = 20, RULE_inputstat = 21, RULE_outputstat = 22, RULE_outputopt = 23, 
		RULE_outputending = 24, RULE_ifstatement = 25, RULE_elseifstat = 26, RULE_elsestatement = 27, 
		RULE_whileloop = 28, RULE_forloop = 29, RULE_number = 30, RULE_expression = 31, 
		RULE_expression_suffix = 32, RULE_expression1 = 33, RULE_expression1_suffix = 34, 
		RULE_expression2 = 35, RULE_aritm = 36, RULE_plusneg = 37, RULE_idexpropt = 38, 
		RULE_boolexpr = 39, RULE_boolexpr_suffix = 40, RULE_boolexpr1 = 41, RULE_boolexpr1_suffix = 42, 
		RULE_boolexpr2 = 43, RULE_boolexpr2_suffix = 44, RULE_boolexpr3 = 45, 
		RULE_boolexpr3_suffix = 46, RULE_boolexpr4 = 47, RULE_boolexpr4_suffix = 48, 
		RULE_boolexpr5 = 49, RULE_boolexpr5_suffix = 50, RULE_boolexpr6 = 51, 
		RULE_equals = 52, RULE_comparers = 53, RULE_builtin = 54, RULE_sqrt = 55, 
		RULE_srn = 56, RULE_rdm = 57, RULE_abs = 58, RULE_pow = 59;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicial", "functionchain", "funcion", "main", "returnopt", "type", "params", 
			"params_suffix", "body", "nonempty", "vardeclaration", "arrdeclaration", 
			"arrdeclarationopt", "idcall", "idstuff", "idopt", "dotsize", "arrpos", 
			"arguments", "arguments_suffix", "assignation", "inputstat", "outputstat", 
			"outputopt", "outputending", "ifstatement", "elseifstat", "elsestatement", 
			"whileloop", "forloop", "number", "expression", "expression_suffix", 
			"expression1", "expression1_suffix", "expression2", "aritm", "plusneg", 
			"idexpropt", "boolexpr", "boolexpr_suffix", "boolexpr1", "boolexpr1_suffix", 
			"boolexpr2", "boolexpr2_suffix", "boolexpr3", "boolexpr3_suffix", "boolexpr4", 
			"boolexpr4_suffix", "boolexpr5", "boolexpr5_suffix", "boolexpr6", "equals", 
			"comparers", "builtin", "sqrt", "srn", "rdm", "abs", "pow"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'.'", "','", "';'", "']'", "'['", "')'", "'('", "'+'", 
			"'-'", "'*'", "'{'", "'}'", "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", 
			"'>'", "'>='", "'?'", "'Get'", "'next'", "'input'", "'Put'", "'to'", 
			"'output'", "'if'", "'elseif'", "'else'", "'while'", "'for'", "'integer'", 
			"'float'", "'array'", "'Function'", "'returns'", "'size'", "'Main'", 
			"'or'", "'and'", "'nothing'", "'not'", "'SeedRandomNumbers'", "'AbsoluteValue'", 
			"'SquareRoot'", "'RaiseToPower'", "'RandomNumber'", "'with'", "'decimal'", 
			"'places'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TKN_ASSIGN", "TKN_PERIOD", "TKN_COMMA", "TKN_SEMICOLON", "TKN_CLOSING_BRA", 
			"TKN_OPENING_BRA", "TKN_CLOSING_PAR", "TKN_OPENING_PAR", "TKN_PLUS", 
			"TKN_MINUS", "TKN_TIMES", "TKN_OPENING_CB", "TKN_CLOSING_CB", "TKN_DIV", 
			"TKN_MOD", "TKN_EQUAL", "TKN_NEQ", "TKN_LESS", "TKN_LEQ", "TKN_GREATER", 
			"TKN_GEQ", "TKN_QUESTION_MARK", "GET", "NEXT", "INPUT", "PUT", "TO", 
			"OUTPUT", "IF", "ELSEIF", "ELSE", "WHILE", "FOR", "INTEGER", "FLOAT", 
			"ARRAY", "FUNCTION", "RETURNS", "SIZE", "MAIN", "OR", "AND", "NOTHING", 
			"NOT", "SRN", "ABS", "SQRT", "POW", "RAND", "WITH", "DECIMAL", "PLACES", 
			"TKN_ID", "TKN_INT", "TKN_FLOAT", "TKN_STR", "ESP", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoralLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoralLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InicialContext extends ParserRuleContext {
		public List<TerminalNode> FUNCTION() { return getTokens(CoralLanguageParser.FUNCTION); }
		public TerminalNode FUNCTION(int i) {
			return getToken(CoralLanguageParser.FUNCTION, i);
		}
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public FunctionchainContext functionchain() {
			return getRuleContext(FunctionchainContext.class,0);
		}
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public NonemptyContext nonempty() {
			return getRuleContext(NonemptyContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public InicialContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicial; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterInicial(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitInicial(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitInicial(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicialContext inicial() throws RecognitionException {
		InicialContext _localctx = new InicialContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicial);
		try {
			setState(129);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(FUNCTION);
				setState(121);
				funcion();
				setState(122);
				match(FUNCTION);
				setState(123);
				functionchain();
				setState(124);
				main();
				}
				break;
			case TKN_OPENING_PAR:
			case TKN_PLUS:
			case TKN_MINUS:
			case PUT:
			case IF:
			case WHILE:
			case FOR:
			case INTEGER:
			case FLOAT:
			case SRN:
			case ABS:
			case SQRT:
			case POW:
			case RAND:
			case TKN_ID:
			case TKN_INT:
			case TKN_FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				nonempty();
				setState(127);
				body();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionchainContext extends ParserRuleContext {
		public FuncionContext funcion() {
			return getRuleContext(FuncionContext.class,0);
		}
		public TerminalNode FUNCTION() { return getToken(CoralLanguageParser.FUNCTION, 0); }
		public FunctionchainContext functionchain() {
			return getRuleContext(FunctionchainContext.class,0);
		}
		public FunctionchainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionchain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterFunctionchain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitFunctionchain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitFunctionchain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionchainContext functionchain() throws RecognitionException {
		FunctionchainContext _localctx = new FunctionchainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionchain);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TKN_ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				funcion();
				setState(132);
				match(FUNCTION);
				setState(133);
				functionchain();
				}
				break;
			case MAIN:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncionContext extends ParserRuleContext {
		public TerminalNode TKN_ID() { return getToken(CoralLanguageParser.TKN_ID, 0); }
		public TerminalNode TKN_OPENING_PAR() { return getToken(CoralLanguageParser.TKN_OPENING_PAR, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode TKN_CLOSING_PAR() { return getToken(CoralLanguageParser.TKN_CLOSING_PAR, 0); }
		public TerminalNode RETURNS() { return getToken(CoralLanguageParser.RETURNS, 0); }
		public ReturnoptContext returnopt() {
			return getRuleContext(ReturnoptContext.class,0);
		}
		public TerminalNode TKN_OPENING_CB() { return getToken(CoralLanguageParser.TKN_OPENING_CB, 0); }
		public NonemptyContext nonempty() {
			return getRuleContext(NonemptyContext.class,0);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode TKN_CLOSING_CB() { return getToken(CoralLanguageParser.TKN_CLOSING_CB, 0); }
		public FuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterFuncion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitFuncion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitFuncion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncionContext funcion() throws RecognitionException {
		FuncionContext _localctx = new FuncionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(TKN_ID);
			setState(139);
			match(TKN_OPENING_PAR);
			setState(140);
			params();
			setState(141);
			match(TKN_CLOSING_PAR);
			setState(142);
			match(RETURNS);
			setState(143);
			returnopt();
			setState(144);
			match(TKN_OPENING_CB);
			setState(145);
			nonempty();
			setState(146);
			body();
			setState(147);
			match(TKN_CLOSING_CB);
			setState(148);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(CoralLanguageParser.MAIN, 0); }
		public TerminalNode TKN_OPENING_PAR() { return getToken(CoralLanguageParser.TKN_OPENING_PAR, 0); }
		public TerminalNode TKN_CLOSING_PAR() { return getToken(CoralLanguageParser.TKN_CLOSING_PAR, 0); }
		public TerminalNode RETURNS() { return getToken(CoralLanguageParser.RETURNS, 0); }
		public TerminalNode NOTHING() { return getToken(CoralLanguageParser.NOTHING, 0); }
		public TerminalNode TKN_OPENING_CB() { return getToken(CoralLanguageParser.TKN_OPENING_CB, 0); }
		public NonemptyContext nonempty() {
			return getRuleContext(NonemptyContext.class,0);
		}
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public TerminalNode TKN_CLOSING_CB() { return getToken(CoralLanguageParser.TKN_CLOSING_CB, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(MAIN);
			setState(151);
			match(TKN_OPENING_PAR);
			setState(152);
			match(TKN_CLOSING_PAR);
			setState(153);
			match(RETURNS);
			setState(154);
			match(NOTHING);
			setState(155);
			match(TKN_OPENING_CB);
			setState(156);
			nonempty();
			setState(157);
			body();
			setState(158);
			match(TKN_CLOSING_CB);
			setState(159);
			body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnoptContext extends ParserRuleContext {
		public VardeclarationContext vardeclaration() {
			return getRuleContext(VardeclarationContext.class,0);
		}
		public TerminalNode NOTHING() { return getToken(CoralLanguageParser.NOTHING, 0); }
		public ReturnoptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnopt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterReturnopt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitReturnopt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitReturnopt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnoptContext returnopt() throws RecognitionException {
		ReturnoptContext _localctx = new ReturnoptContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_returnopt);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				vardeclaration();
				}
				break;
			case NOTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(NOTHING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(CoralLanguageParser.INTEGER, 0); }
		public TerminalNode FLOAT() { return getToken(CoralLanguageParser.FLOAT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || _la==FLOAT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode TKN_ID() { return getToken(CoralLanguageParser.TKN_ID, 0); }
		public Params_suffixContext params_suffix() {
			return getRuleContext(Params_suffixContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_params);
		try {
			setState(172);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER:
			case FLOAT:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				type();
				setState(168);
				match(TKN_ID);
				setState(169);
				params_suffix();
				}
				break;
			case TKN_CLOSING_PAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Params_suffixContext extends ParserRuleContext {
		public TerminalNode TKN_COMMA() { return getToken(CoralLanguageParser.TKN_COMMA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode TKN_ID() { return getToken(CoralLanguageParser.TKN_ID, 0); }
		public Params_suffixContext params_suffix() {
			return getRuleContext(Params_suffixContext.class,0);
		}
		public Params_suffixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params_suffix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterParams_suffix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitParams_suffix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitParams_suffix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Params_suffixContext params_suffix() throws RecognitionException {
		Params_suffixContext _localctx = new Params_suffixContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params_suffix);
		try {
			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TKN_COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(174);
				match(TKN_COMMA);
				setState(175);
				type();
				setState(176);
				match(TKN_ID);
				setState(177);
				params_suffix();
				}
				break;
			case TKN_CLOSING_PAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public NonemptyContext nonempty() {
			return getRuleContext(NonemptyContext.class,0);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoralLanguageListener ) ((CoralLanguageListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoralLanguageVisitor ) return ((CoralLanguageVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}
